--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <h1>ჩვენი მომხმარებლები</h1>
     <button id="btn">ჩვენება</button>
+    <section id="users"></section>
 
     <section id="users"></section>
 
